test(lotto): Lotto class 기능 테스트 업데이트